--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
     <div>
         <h3 id="turn-text" class="webpage-text centerText" hidden>Turn <span id="turn-counter">0</span></h3>
         <h3 id="game-start-tip" class="webpage-text centerText">Select the card <span style="color:gold">Kaya</span> selected to begin.</h3>
+        <div id="latest-selection" class="webpage-text centerText" hidden>
+            <img id="latest-selection-image" src="images/game/placeholder.png" alt=""><br>
+            <img class="latest-selection-character-circle" src="images/webpage/character_circle.png" alt=""><br>
+            <div id="latest-selection-character" class="latest-selection-character">x</div>
+            <h3 id="latest-selection-text" class="centerText" style="color: gold;">phrase_text</h3>
+        </div>
         <h3 id="your-turn-text" class="webpage-text centerText" hidden><span style="color:gold">Your turn.</span><br>Select the option you chose in game.</h3>
         <h3 id="opponent-turn-text" class="webpage-text centerText" hidden><span style="color:gold">Kaya</span>'s turn.<br>Select the card that <span style="color:gold">Kaya</span> selected.</h3>
         <h3 id="rush-mode-button-text" class="centerText" hidden>
