Add more tips, change a word and another change
- Changed words are now alerted via Alert popup so people know what they need to fix.
- Added Tooltip information in tips.
- Added additional information in the tooltips for cards.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,40 @@
         Cards can only be grayscale if it is <span style="color: gold">Kaya</span>'s turn and if the card is a "<span style="color: rgb(255, 127, 170); font-weight: bold">Priconneyomi (プリコネヨミ)</span>" phrase.
         <br>
         <span style="color: gold">Kaya</span> will NEVER use a "<span style="color: rgb(255, 127, 170); font-weight: bold">Priconneyomi</span>" card, so if a "<span style="color: rgb(255, 127, 170); font-weight: bold">Priconneyomi</span>" is available, you should prioritize using that card if possible.
+    </p>
 
+    <hr>
+    <h2 class="webpage-text centerText">Tooltip (Title) Information</h2>
+    <p class="webpage-text">
+        While the game is in progress, the Player can hover over a card to reveal more information about it.
+        <br><br>
+        <img src="images/game/yuni.png" style="max-height: 64px" alt="" title="" onload="this.title = 'ユニ\n\n'+
+            'Kaya has a chance of choosing a new phrase!\n'+
+            '  - rabbit;にんぎよう;futsuyomi\n'+
+            '  - ninon;ニノン;futsuyomi\n'+
+            '\n'+
+            'Player has a chance of choosing a new phrase!\n'+
+            '  - meat;にく;futsuyomi -> (14 New Choices)\n'+
+            '  - cat;にやんこ;urayomi -> (15 New Choices)\n'+
+            '  - rabbit;にんぎよう;futsuyomi -> (14 New Choices)\n'+
+            '\n'+
+            'Kaya and Player has a chance of choosing new phrases!\n'+
+            '  - rabbit;にんぎよう;futsuyomi -> (14 New Choices)'">
+        <br>
+        <span style="color: gold">Hover your cursor over this card to see some example information.</span>
+        <br><br>
+        You can find the card's phrase on the top.
+        <br><br>
+        If the card is highlighted, additional information will be displayed.
+        <br><br>
+        Cards capable of obtaining a <span style="color: rgb(115, 175, 85); font-weight: bold">green</span> color will display the available phrases <span style="color: gold">Kaya</span> will select from.
+        <br><br>
+        Cards capable of obtaining a <span style="color: rgb(46, 169, 255); font-weight: bold">blue</span> color will display the phrase(s) <span style="color: gold">Kaya</span> can choose from to reveal the new phrases the Player can choose from.<br>
+        The amount of possible new choices will also be displayed.
+        <br><br>
+        Cards capable of obtaining a <span style="color: rgb(255, 127, 170); font-weight: bold">red</span> color will display the phrase <span style="color: gold">Kaya</span> needs to select as well as the amount of new phrases the Player can choose from.
+        <br><br>
+        For the best efficiency, it would be wise to pause the minigame and consider your choices for the best chance of getting a new phrase.
     </p>
 
 </div>
