New Additions/Fixes/Changes
- Add gold highlight
- Made it so green highlight will appear over blue
- Fixed a bug

Read Changelog for more information.

--- a/index.html
+++ b/index.html
@@ -127,11 +127,14 @@
         A <span style="color: rgb(255, 127, 170); font-weight: bold">red</span> color surrounding the card means that <span style="color: gold">Kaya</span> and the Player has a chance of both choosing a new phrase, depending on <span style="color: gold">Kaya</span>'s choice.<br>
         <span style="color: gold; font-weight: bold">This should be the highest priority card to select if there are no new cards available.</span>
         <br><br>
+        <img src="images/game/yuni.png" style="max-height: 64px" class="futsuyomi" alt=""><br>
+        A <span style="color: rgb(115, 175, 85); font-weight: bold">green</span> color surrounding the card means that <span style="color: gold">Kaya</span> has a chance of choosing a new phrase.
+        <br><br>
         <img src="images/game/yuni.png" style="max-height: 64px" class="urayomi" alt=""><br>
         A <span style="color: rgb(46, 169, 255); font-weight: bold">blue</span> color surrounding the card means that the Player has a chance of choosing a new phrase on their next turn, depending on <span style="color: gold">Kaya</span>'s choice.
         <br><br>
-        <img src="images/game/yuni.png" style="max-height: 64px" class="futsuyomi" alt=""><br>
-        A <span style="color: rgb(115, 175, 85); font-weight: bold">green</span> color surrounding the card means that <span style="color: gold">Kaya</span> has a chance of choosing a new phrase.
+        <img src="images/game/yuni.png" style="max-height: 64px" class="gold-outline" alt=""><br>
+        On <span style="color: gold">Kaya</span>'s turn, cards that are highlighted <span style="color: gold; font-weight: bold">gold</span> have new phrases for the Player if <span style="color: gold">Kaya</span> selects them.<br>
         <br><br>
         <img src="images/game/yuni.png" style="max-height: 64px" alt=""><br>
         No coloring means that there is no chance <span style="color: gold">Kaya</span> or the Player will obtain a new phrase by the Player's next turn.
@@ -139,10 +142,11 @@
         Only one color will highlight the card, but there can be other options available.<br>
         You can see these options by hovering over the card.
         <br><br>
-        Cards will ONLY be highlighted on the Player's turn.
+        Cards will ONLY be highlighted <span style="color: rgb(255, 127, 170); font-weight: bold">Red</span>, <span style="color: rgb(115, 175, 85); font-weight: bold">Green</span>, or <span style="color: rgb(46, 169, 255); font-weight: bold">Blue</span> on the Player's turn.<br>
+        Cards will ONLY be highlighted <span style="color: gold; font-weight: bold">Gold</span> on <span style="color: gold">Kaya</span>'s turn.
         <br><br>
         Color Priority:<br>
-        <span style="color: rgb(255, 127, 170); font-weight: bold">Red Color</span> > <span style="color: rgb(46, 169, 255); font-weight: bold">Blue Color</span> > <span style="color: rgb(115, 175, 85); font-weight: bold">Green Color</span>
+        <span style="color: rgb(255, 127, 170); font-weight: bold">Red Color</span> > <span style="color: rgb(115, 175, 85); font-weight: bold">Green Color</span> > <span style="color: rgb(46, 169, 255); font-weight: bold">Blue Color</span>
         <br><br>
     </p>
 
@@ -185,12 +189,12 @@
         <br><br>
         If the card is highlighted, additional information will be displayed.
         <br><br>
-        Cards capable of obtaining a <span style="color: rgb(115, 175, 85); font-weight: bold">green</span> color will display the available phrases <span style="color: gold">Kaya</span> will select from.
+        Cards capable of obtaining a <span style="color: rgb(115, 175, 85); font-weight: bold">green</span> highlight will display the available phrases <span style="color: gold">Kaya</span> will select from.
         <br><br>
-        Cards capable of obtaining a <span style="color: rgb(46, 169, 255); font-weight: bold">blue</span> color will display the phrase(s) <span style="color: gold">Kaya</span> can choose from to reveal the new phrases the Player can choose from.<br>
+        Cards capable of obtaining a <span style="color: rgb(46, 169, 255); font-weight: bold">blue</span> highlight will display the phrase(s) <span style="color: gold">Kaya</span> can choose from to reveal the new phrases the Player can choose from.<br>
         The amount of possible new choices will also be displayed.
         <br><br>
-        Cards capable of obtaining a <span style="color: rgb(255, 127, 170); font-weight: bold">red</span> color will display the phrase <span style="color: gold">Kaya</span> needs to select as well as the amount of new phrases the Player can choose from.
+        Cards capable of obtaining a <span style="color: rgb(255, 127, 170); font-weight: bold">red</span> highlight will display the phrase <span style="color: gold">Kaya</span> needs to select as well as the amount of new phrases the Player can choose from.
         <br><br>
         For the best efficiency, it would be wise to pause the minigame and consider your choices for the best chance of getting a new phrase.
     </p>
