Hide urayomi words at the start
Urayomi words are now hidden on the start because it seems Kaya will never select them.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         A <span style="color: rgb(46, 169, 255); font-weight: bold">blue</span> color surrounding the card means that the Player has a chance of choosing a new phrase on their next turn, depending on <span style="color: gold">Kaya</span>'s choice.
         <br><br>
         <img src="images/game/yuni.png" style="max-height: 64px" class="gold-outline" alt=""><br>
-        On <span style="color: gold">Kaya</span>'s turn, cards that are highlighted <span style="color: gold; font-weight: bold">gold</span> have new phrases for the Player if <span style="color: gold">Kaya</span> selects them.<br>
+        On <span style="color: gold">Kaya</span>'s turn, cards that are highlighted <span style="color: gold; font-weight: bold">gold</span> have new phrases for the Player if <span style="color: gold">Kaya</span> selects them.
         <br><br>
         <img src="images/game/yuni.png" style="max-height: 64px" alt=""><br>
         No coloring means that there is no chance <span style="color: gold">Kaya</span> or the Player will obtain a new phrase by the Player's next turn.
