Fix Bug ; Minor Changes ; New Feature
- Added an option for the user to turn cards they already collected in the Word Search to lower opacity
- Fixed a bug where if the user did not have any save data, the word search list would not load
- Made it so the starting card list would not refresh itself everytime a user made changes in the Word List if a game isnt in progress. The refresh now only happens when the word list is closed.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
     <br><br>
     <button onclick="toggle_word_search()">Close Word Search</button><button style="margin-left: 30px" onclick="reset_word_search()">Reset Word Search</button>
     <br><br><br>
+    <label for="low-opacity-word-search-checkbox" class="webpage-text">Mark Obtained Words?: </label>
+    <input id="low-opacity-word-search-checkbox"
+           type="checkbox"
+           onchange="build_phrase_list()">
+    <br><br><br>
     <hr>
     <div id="phrase-table-div" hidden>
         <table class="centerTable"><tbody><tr><th><div class="chart" id="tree-simple"></div></th></tr></tbody></table>
@@ -274,8 +279,8 @@
                 }
                 console.log(get_colored_message(shiritori_game.sender_name, "User saved data loaded!", message_status.SUCCESS));
                 build_all_choices();
-                build_phrase_list();
             }
+            build_phrase_list();
         }
     }
 </script>
