Visual Bug Fixes (3)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img id="latest-selection-image" src="images/game/placeholder.png" alt=""><br>
             <img class="latest-selection-character-circle" src="images/webpage/character_circle.png" alt=""><br>
             <div id="latest-selection-character" class="latest-selection-character">x</div>
-            <div id="latest-selection-text" class="centerText" style="color: gold;">phrase_text</div>
+            <h3 id="latest-selection-text" class="centerText" style="color: gold;">phrase_text</h3>
             <button id="undo-button" onclick="undo_phrase()" disabled>Made a mistake? Undo!</button>
         </div>
         <h3 id="your-turn-text" class="webpage-text centerText" hidden><span style="color:gold">Your turn.</span><br>Select the option you chose in game.</h3>
