--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
 
 <footer>
     <p class="footer webpage-text">Made With <span style="color:#ff4d4d">❤</span> By S'pugn <img class="footer" src="images/webpage/HAhaa.png" alt=""></p>
+    <p class="footer">
+        <a href="https://github.com/Expugn/priconne-shiritori" target="_blank" style="text-decoration: none;">
+            <img src="images/webpage/GitHub-Mark-Light-32px.png" style="text-decoration: none;" alt="GitHub">
+        </a>
+    </p>
 </footer>
 
 <script>
